<resources>
    <string name="app_name">StaffPass</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="email_settings_not_available">Email settings not available.</string>
    <string name="sms_settings_not_available">SMS settings not available.</string>
    <string name="camera_permission_denied">Permission denied, require camera permission to scan qr code.</string>
    <string name="app_exit_caption">Exit</string>
    <string name="app_exit_message">Are you sure want to exit ?</string>
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="dialog_alert">Alert</string>
    <string name="splash_powered_by">Powered by</string>
    <string name="splash_powered_by_text">Leego Visitor Management</string>
    <string name="scan_server_details_page_caption">Scan Server Details</string>
    <string name="scan_server_details_page_instruction">Please scan the property QR code provided by your management office</string>
    <string name="scan_server_details_scan">Scan with camera</string>
    <string name="scan_server_details_scan_error_null">Error - null</string>
    <string name="scan_server_details_scan_error_empty">Error - empty</string>
    <string name="scan_server_details_scan_canceled">Cancelled</string>
    <string name="scan_server_details_connect_success">Connected to server successfully</string>
    <string name="scan_server_details_data_save_error">Unable to save server details</string>
    <string name="scan_server_details_invalid_server_details">Invalid server details</string>
    <string name="scan_server_details_app_token_not_found">App token not found</string>
    <string name="scan_server_details_camera">Camera</string>
    <string name="scan_server_details_gallery">Gallery</string>
    <string name="scan_server_details_cancel">Cancel</string>
    <string name="scan_server_details_invalid_qr_code">Invalid QR Code</string>
    <string name="scan_server_details_cannot_read_qr_code">Cannot read qr code</string>
    <string name="scan_server_details_select_from_gallery">Select from album</string>
    <string name="lor_vms">VMS</string>
    <string name="lor_button_new_registration">New Registration</string>
    <string name="lor_button_login">Login</string>
    <string name="registration_page_caption">New Registration</string>
    <string name="registration_name">Name</string>
    <string name="registration_name_hint">John Smith</string>
    <string name="registration_mobile_no">Mobile No.</string>
    <string name="registration_mobile_no_hint">98927673</string>
    <string name="registration_email">Email</string>
    <string name="registration_email_hint">E.g. johnsmith@gmail.com</string>
    <string name="registration_verification_text">To proceed, we’ll send a verification code to these mobile no. and email.</string>
    <string name="registration_company_name">REGISTERED COMPANY NAME</string>
    <string name="registration_company_name_hint">Company Pte. Ltd.</string>
    <string name="registration_button_next">Next</string>
    <string name="registration_verify_mobile_no_page_caption">Verify Your Mobile No.</string>
    <string name="registration_verify_mobile_no_page_instruction">OTP/ VERIFICATION CODE</string>
    <string name="registration_verify_mobile_no_page_expired_text">Expired in 30 secs</string>
    <string name="registration_verify_mobile_no_page_resend_text">Resend New OTP</string>
    <string name="registration_verify_mobile_no_page_next">Next</string>
    <string name="registration_verify_email_page_caption">Verify Your Email Address</string>
    <string name="registration_verify_email_page_instruction">OTP/ VERIFICATION CODE</string>
    <string name="registration_verify_email_page_expired_text">Expired in 30 secs</string>
    <string name="registration_verify_email_page_resend_text">Resend New OTP</string>
    <string name="registration_verify_email_page_submit">Submit</string>
    <string name="registration_acknowledgement_page_caption">Acknowledgement</string>
    <string name="registration_acknowledgement_page_instruction">You have successfully submitted a new account registration!</string>
    <string name="registration_acknowledgement_page_note">Note</string>
    <string name="registration_acknowledgement_page_note_instruction">Please be informed that you will be notified by email/SMS after the Account Registration is approved in 3&#8211;5 working days.</string>
    <string name="registration_acknowledgement_page_done">Done</string>
    <string name="login_page_caption">Login</string>
    <string name="login_success">Login success</string>
    <string name="login_data_save_error">Unable to save login details</string>
    <string name="login_email">EMAIL</string>
    <string name="login_email_text">Email</string>
    <string name="login_email_text_hint"></string>
    <string name="login_email_password">PASSWORD</string>
    <string name="login_email_password_forgot">Forgot your password?</string>
    <string name="login_email_password_mobile_no">Login with mobile no.</string>
    <string name="login_email_next">Next</string>
    <string name="login_email_empty_email">Enter email</string>
    <string name="login_email_empty_invalid_email">Invalid email</string>
    <string name="login_email_empty_password">Enter password</string>
    <string name="login_email_or">or</string>
    <string name="login_email_use_pin">Use PIN</string>
    <string name="login_email_use_biometric">Use Biometric</string>
    <string name="login_mobile_no">MOBILE NO.</string>
    <string name="login_mobile_no_text">MOBILE NO.</string>
    <string name="login_mobile_no_text_hint">98927673</string>
    <string name="login_mobile_no_password">PASSWORD</string>
    <string name="login_mobile_no_otp_expired">Expired in 30 secs</string>
    <string name="login_mobile_no_otp_resend">Resend New OTP</string>
    <string name="login_mobile_no_next">Next</string>
    <string name="login_mobile_no_country_code_empty">Select country code</string>
    <string name="login_mobile_no_empty">Enter mobile no.</string>
    <string name="login_mobile_no_invalid">Invalid mobile no.</string>
    <string name="login_mobile_no_password_empty">Enter password</string>
    <string name="login_email_verify_caption">Verify Your Email Address</string>
    <string name="login_email_verify_info">Verify Your Email Address</string>
    <string name="login_email_verify_verification_code">VERIFICATION CODE</string>
    <string name="login_email_verify_verification_code_expiry_default">Enter the verification code before it expires in 5 minutes.</string>
    <string name="login_email_verify_verification_code_expiry_text_1">Enter the verification code before it expires in</string>
    <string name="login_email_verify_verification_code_expiry_text_2">minutes.</string>
    <string name="login_email_verify_verification_code_resend">Resend new verification code</string>
    <string name="login_email_verify_button_submit">Submit</string>
    <string name="login_email_verification_code_subject">Verification Code</string>
    <string name="login_email_verification_code_send">Verification code sent</string>
    <string name="login_verification_code_text_1">Your verification code is</string>
    <string name="login_verification_code_text_2">and will expire after</string>
    <string name="login_verification_code_text_3">minutes.</string>
    <string name="login_verification_code_invalid">Invalid verification code</string>
    <string name="login_verification_code_enter">Enter verification code</string>
    <string name="login_verification_code_expired">Verification code expired</string>
    <string name="login_retry_text_1">Try again after</string>
    <string name="login_retry_text_2">minutes.</string>
    <string name="login_mobile_no_verify_caption">Verify Your Mobile No.</string>
    <string name="login_mobile_verification_code_send">Verification code sent</string>
    <string name="home_bottom_tab_1">Home</string>
    <string name="home_bottom_tab_2">Visitors</string>
    <string name="home_bottom_tab_3">Access</string>
    <string name="home_bottom_tab_4">Notifications</string>
    <string name="home_bottom_tab_5">Settings</string>
    <string name="home_welcome_text_gm">Good Morning,</string>
    <string name="home_welcome_text_ga">Good Afternoon,</string>
    <string name="home_welcome_text_ge">Good Evening,</string>
    <string name="home_username">John</string>
    <string name="home_quick_access">Quick Access</string>
    <string name="home_my_access">My Access</string>
    <string name="home_todays_visitors">Today’s Visitors</string>
    <string name="home_all_visitors">All Visitors</string>
    <string name="home_past_visitors">Past Visitors</string>
    <string name="home_upcoming_visitors">Upcoming Visitors</string>
    <string name="home_upcoming_visitors_no_visitors">No data to display</string>
    <string name="home_visitor_appointment_no">XXXX</string>
    <string name="home_visitor_name">Visitor Name:</string>
    <string name="home_visitor_type">Visitor Type:</string>
    <string name="home_visitor_mobile_no">Mobile No.</string>
    <string name="home_visitor_start_date">Visit Dates:</string>
    <string name="home_visitor_end_date">Expired on:</string>
    <string name="home_visitor_overnights">Overnight(s):</string>
    <string name="home_visitor_status">Status:</string>
    <string name="home_visitor_login_id_blank">Employee id is empty</string>
    <string name="home_visitor_success_no_visitor_data">No visitors found.</string>
    <string name="visitor_page_caption">Visitors</string>
    <string name="visitor_search_hint">Search Visitors</string>
    <string name="visitor_tab_todays">Today’s</string>
    <string name="visitor_tab_all_visitors">All Visitors</string>
    <string name="visitor_tab_history">History</string>
    <string name="visitor_appointment_no">87468</string>
    <string name="visitor_name">Visitor Name:</string>
    <string name="visitor_type">Visitor Type:</string>
    <string name="visitor_mobile_no">Mobile No.</string>
    <string name="visitor_start_date">Visit Dates:</string>
    <string name="visitor_end_date">Expired on:</string>
    <string name="visitor_overnights">Overnight(s):</string>
    <string name="visitor_status">Status:</string>
    <string name="visitor_success_no_visitor_data">No visitors found.</string>
    <string name="visitor_details_page_caption">A15-403</string>
    <string name="visitor_details_unit_name">Unit Name</string>
    <string name="visitor_details_user_name">User Name</string>
    <string name="visitor_details_invitation_title">Invitation Title</string>
    <string name="visitor_details_visitor_name">Visitor Name</string>
    <string name="visitor_details_company_name">Company Name</string>
    <string name="visitor_details_visit_dates">Visit Dates</string>
    <string name="visitor_details_valid_until">Valid Until</string>
    <string name="visitor_details_overnight">Overnight</string>
    <string name="visitor_details_entry_type">Entry Type</string>
    <string name="visitor_details_vehicle_no">Vehicle No.</string>
    <string name="visitor_details_remarks">Remarks</string>
    <string name="visitor_details_created_by">Created by</string>
    <string name="visitor_details_created_at">Created at</string>
    <string name="visitor_details_last_updated_by">Last Updated by</string>
    <string name="access_page_caption">Access</string>
    <string name="access_employee_access">Employee Access</string>
    <string name="access_page_instruction">Scan/Present this QR code at the gate.</string>
    <string name="access_host_employee_no">Employee No.:</string>
    <string name="access_host_visitor_name">Property</string>
    <string name="access_host_vehicle_no">Vehicle Number</string>
    <string name="access_data_save_error">Unable to save or update access details</string>
    <string name="access_login_id_blank">Employee id is empty</string>
</resources>