<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="5dp"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/rl_NoConnection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_connection"
                android:textSize="@dimen/text_size_normal"
                android:gravity="center"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_AppointmentNo"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_appointment_no"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <ImageView
                    android:id="@+id/iv_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_arrow"
                    android:padding="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_name"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_Name"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_type"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_Type"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_mobile_no"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_MobileNo"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_start_date"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_StartDate"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_end_date"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_EndDate"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_overnights"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_Overnights"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_visitor_status"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_Status"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/tv_text_color_active"
                    android:layout_marginTop="5dp"/>

            </TableRow>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>