<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/line_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_Camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_server_details_camera"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_regular"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_bg"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_Gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_server_details_gallery"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_regular"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_Cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_server_details_cancel"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_regular"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>