<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_background_2"
    tools:context=".activity.login.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="16dp"
                app:contentInsetEnd="16dp"
                style="@style/Theme.MyCustomToolbar">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <ImageView
                        android:layout_weight="1"
                        android:id="@+id/iv_BackArrow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_back_arrow"/>

                    <TextView
                        android:layout_weight="8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/login_page_caption"
                        style="@style/Theme.MyCustomToolbarText"
                        android:gravity="center"/>

                    <ImageView
                        android:visibility="invisible"
                        android:layout_weight="1"
                        android:id="@+id/iv_ScanServerDetails"
                        android:foregroundGravity="right"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_back_arrow"/>

                </TableRow>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/parent_page_margin"
            android:layout_below="@+id/appBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabBackground="@drawable/tabs_selector"
                    android:backgroundTint="@color/page_background"
                    app:tabIndicator="@null"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/black">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_email" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_mobile_no" />

                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>